--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <br />
-                <button type="submit">Submit</button>
+                <button id="submit" type="submit">Submit</button>
             </form>
         </div>
         <div class="right">
